--- a/css/main.css
+++ b/css/main.css
@@ -359,6 +359,9 @@ th {
 #cnil.show {
     transform: translate(0, 0);
 }
+#fixo {
+	max-height: 100%;
+}
 .ontop {
     background: rgba(0, 0, 0, 0.3);
     border-radius: 5px;
@@ -376,7 +379,6 @@ th {
     padding: 0;
     height: ;
 }
-
 .ontop i {
     font-size: 2.5rem;
 }
@@ -1869,7 +1871,7 @@ nav.details_boat .tabs_nav a {
 }
 @media all and (max-width: 800px) {
     #home_slider {
-        height: auto;
+        
         min-height: -webkit-fill-available;
     }
 }
